# keyplane

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  index.html  overlay.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: desktop-build.yml  signed-release.yml
crates/keyplane-core/: Cargo.toml
crates/keyplane-core/examples/: dump_dtos.rs
crates/keyplane-core/src/: action.rs  compose.rs  event.rs  geometry.rs  health.rs  ids.rs  legend.rs  lib.rs  precedence.rs  provenance.rs  snapshot.rs  visibility.rs
crates/keyplane-core/src/backend/: fake.rs  mod.rs
crates/keyplane-core/src/import/: keyviz.rs  mod.rs  overkeys.rs  vial.rs  zmk.rs
crates/keyplane-core/src/model/: keymap.rs  mod.rs  physical.rs  runtime.rs  style.rs
crates/keyplane-core/src/profile/: codec.rs  edn.rs  migrate.rs  mod.rs
crates/keyplane-core/src/resolve/: mod.rs  semantic.rs
crates/keyplane-core/tests/: backend_test.rs  compose_test.rs  import_test.rs  mvp_acceptance.rs  profile_test.rs  resolve_test.rs  units_test.rs
crates/keyplane-core/tests/fixtures/: demo.vil  keyviz-style.json  overkeys.json  sample.keymap
crates/keyplane-kanata/: Cargo.toml
crates/keyplane-kanata/src/: lib.rs
crates/keyplane-kanata/tests/: kanata_test.rs
crates/keyplane-keypeek/: Cargo.toml  NOTICE
crates/keyplane-keypeek/examples/: discover.rs  live_keypeek.rs  probe_env.rs
crates/keyplane-keypeek/src/: backend.rs  bridge.rs  lib.rs
crates/keyplane-keypeek/tests/: backend_test.rs  bridge_test.rs  keypeek_live_test.rs
crates/keyplane-sentinel/: Cargo.toml
crates/keyplane-sentinel/examples/: validate_capture.rs
crates/keyplane-sentinel/src/: lib.rs
crates/keyplane-sentinel/tests/: sentinel_test.rs
docs/: attribution.md  hardware-validation.md  implementation-log.md
docs/adr/: 0001-gpl-3-derived-app.md  0002-firmware-state-primary.md  0003-first-slice-keypeek-live-state.md  0004-tauri-shell-with-keypeek-core.md  0005-preserve-raw-and-normalized-key-data.md  0006-full-keyboard-overlay-first.md  0007-best-effort-preview-for-non-authoritative-layer-state.md  0008-overkeys-import-without-writeback.md  0009-kanata-is-a-protocol-backend.md  0010-kanata-mvp-requires-overkeys-style-profile.md  0011-single-keyboard-overlay-mode.md  0012-app-native-edn-profile-format.md  0013-keyviz-compatibility-as-style-import.md  0014-normalized-keyboard-model-contract.md  0015-rust-protocol-backends-behind-tauri-boundary.md  0016-sentinel-keys-as-protocol-backend.md  0017-mvp-targets-keypeek-live-and-nocfree-preview.md  0018-profile-source-precedence.md  0019-source-conflicts-visible-outside-overlay.md  0020-public-hand-editable-edn-profiles.md  0021-import-and-hand-edit-before-full-profile-editor.md  0022-one-active-keyboard-profile-for-mvp.md  0023-backend-failures-as-runtime-state.md  0024-dedicated-overlay-window.md  0025-overlay-click-through-by-default.md  0026-pinned-overlay-visibility-for-mvp.md  0027-profile-owned-display-targeting.md  0028-per-key-coordinate-geometry.md  0029-structured-display-legends.md  0030-semantic-actions-for-visualization-not-execution.md  0031-effective-legends-for-transparent-keys.md  0032-active-layer-stack.md  0033-typed-backend-capabilities-and-health.md  0034-import-candidates-before-profile-commit.md  0035-edn-profile-sections.md  0036-rust-owned-state-composition.md  0037-mvp-acceptance-criteria.md  0038-first-release-non-goals.md  0039-packaging-autostart-and-security.md  0040-keypeek-fork-with-new-product-identity.md  (+6 more)
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/prd/: keyplane-prd.md
docs/release/: signing.md
docs/research/: keyboard-rendering-and-configuration-ecosystem.md
docs/validation/: keypeek-live-hardware.md
scripts/: collect-mvp-acceptance-evidence.rb  collect-signed-release-evidence.rb  validate-evidence-scripts.rb  validate-keypeek-live-hardware.rb  validate-release-workflow.rb  validate-tauri-capabilities.rb
src/: App.css  App.test.tsx  App.tsx  api.ts  domain.ts  fixtures.ts  overlayState.test.ts  overlayState.ts  state.test.ts  state.ts  styles.css  tauriClient.test.ts  tauriClient.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: discover_keypeek_devices.rs
src-tauri/src/: active_profile.rs  backend.rs  capture.rs  commands.rs  domain.rs  driver.rs  fake_backend.rs  host_permissions.rs  importers.rs  kanata_backend.rs  kanata_tcp.rs  keypeek_backend.rs  keypeek_contract.rs  keypeek_live.rs  lib.rs  macos_perms.rs  main.rs  overlay_backend.rs  profile_codec.rs  sentinel_backend.rs  sentinel_shortcuts.rs  state.rs  vial_device.rs
src/__fixtures__/: dtos.json
src/app/: App.tsx  main.tsx
src/components/: Keyboard.test.tsx  Keyboard.tsx  Status.tsx
src/overlay/: Overlay.tsx  main.tsx
src/test/: setup.ts
