[workspace]
resolver = "2"
members = [
    "crates/keyplane-core",
    "crates/keyplane-kanata",
    "crates/keyplane-keypeek",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/prateek/keyplane"
rust-version = "1.82"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
