[package]
name = "keyplane"
version = "0.1.0"
description = "A cross-platform keyboard layer overlay."
authors = ["Keyplane contributors"]
edition = "2021"
license = "GPL-3.0-only"

[lib]
name = "keyplane_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
edn-format = "3.3.0"
tauri = { version = "2.11.3", features = ["macos-private-api"] }
tauri-plugin-opener = "2.5.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
