[package]
name = "keyplane-keypeek"
description = "KeyPeek-derived protocol and keycode-label code reshaped for Keyplane (GPL-3.0)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
keyplane-core = { path = "../keyplane-core" }
qmk-via-api = "0.8.0"
lzma-rs = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
